--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -11,8 +11,8 @@
 }
 
 :root {
-  --light-color: #f3f3fe;
-  --dark-color: #363636;
+  --default-background-color: #f3f3fe;
+  --default-text-color: #363636;
   --border-top-color: rgba(0, 0, 0, 0.1);
   --link-hover-color: rgba(255, 255, 255, 0.2);
   --container-width: 96rem;
@@ -21,6 +21,25 @@
   --body-font-family: "Poppins", sans-serif;
   --title-font-family: "Playfair Display", serif;
   --item-min-height-sm: 20rem;
+}
+
+[data-theme="dark"] {
+  --default-background-color: #000;
+  --default-text-color: #fff;
+  --border-top-color: rgba(255, 255, 255, 0.1);
+}
+
+.project-wrapper {
+  background-color: var(--default-background-color);
+  color: var(--default-text-color);
+  transition: 0.4s;
+}
+
+.about-page-wrapper {
+  background-color: var(--default-background-color);
+  color: var(--default-text-color);
+  transition: 0.4s;
+  height: 100vh;
 }
 
 html {
@@ -33,15 +52,9 @@ body {
   font-family: var(--body-font-family);
   font-size: 1.6rem;
   line-height: 1.5;
-  background-color: var(--light-color);
-  color: var(--dark-color);
+  background-color: var(--default-background-color);
+  color: var(--default-text-color);
   overflow-x: hidden;
-}
-
-body.dark-theme {
-  --light-color: #000;
-  --dark-color: #fff;
-  --border-top-color: rgba(255, 255, 255, 0.1);
 }
 
 a {
@@ -99,7 +112,7 @@ button {
 .has-sparkles::after {
   content: "";
   position: absolute;
-  /* background: url(../images/sparkle.png) center no-repeat; */
+  background: url(../images/sparkle.png) center no-repeat;
   background-size: cover;
 }
 
@@ -147,8 +160,8 @@ button {
   display: flex;
   column-gap: 0.5rem;
   padding: 0 0.5rem;
-  background-color: var(--dark-color);
-  color: var(--light-color);
+  background-color: var(--default-text-color);
+  color: var(--default-background-color);
   border-radius: 0.4rem;
   position: relative;
   z-index: 999;
@@ -176,8 +189,8 @@ button {
 .menu {
   position: absolute;
   right: 1.55rem;
-  background-color: var(--dark-color);
-  color: var(--light-color);
+  background-color: var(--default-text-color);
+  color: var(--default-background-color);
   padding: 0.8rem 1.5rem;
   border-radius: 0.4rem;
   /* z-index: -1; */
@@ -202,7 +215,7 @@ button {
 
 .list-link {
   font-size: 1.4rem;
-  /* color: var(--light-color); */
+  /* color: var(--default-background-color); */
 }
 
 .list-link:hover,
@@ -360,6 +373,7 @@ button {
   align-items: center;
   justify-content: center;
   position: relative;
+  background-color: var(--default-background-color);
 }
 
 .tech-stack-item i {
@@ -383,7 +397,7 @@ button {
 .tech-stack-item::before {
   content: "";
   border: 1rem solid transparent;
-  border-top-color: var(--dark-color);
+  border-top-color: var(--default-text-color);
   transform: translateY(0);
   z-index: 5;
 }
@@ -391,8 +405,8 @@ button {
 .tech-stack-item::after {
   content: attr(data-tooltip);
   width: max-content;
-  background-color: var(--dark-color);
-  color: var(--light-color);
+  background-color: var(--default-text-color);
+  color: var(--default-background-color);
   padding: 0.5rem 1rem;
   border-radius: 0.4rem;
 }
@@ -428,7 +442,7 @@ button {
 .subtitle-number {
   width: 5rem;
   height: 5rem;
-  border: 2px solid var(--dark-color);
+  border: 2px solid var(--default-text-color);
   border-radius: 50%;
   display: flex;
   align-items: center;
@@ -483,7 +497,7 @@ button {
 }
 
 .card-heading {
-  color: var(--dark-color);
+  color: var(--default-text-color);
 }
 
 .card-title {
@@ -516,20 +530,20 @@ button {
 
 .button-fill {
   position: relative;
-  outline: 2px solid var(--dark-color);
+  outline: 2px solid var(--default-text-color);
   transition: color 0.25s;
   overflow: hidden;
 }
 
 .button-fill:hover {
-  color: var(--light-color);
+  color: var(--default-background-color);
 }
 
 .button-fill::before {
   content: "";
   width: 100%;
   height: 100%;
-  background-color: var(--dark-color);
+  background-color: var(--default-text-color);
   position: absolute;
   top: 0;
   left: 0;
@@ -571,7 +585,7 @@ button {
 
 .input input {
   width: 100%;
-  border-bottom: 1px solid var(--dark-color);
+  border-bottom: 1px solid var(--default-text-color);
   padding: 2rem 0.5rem 1rem 0.5rem;
 }
 
@@ -605,16 +619,22 @@ button {
 }
 
 .footer .list-link {
-  color: var(--dark-color);
+  color: var(--default-text-color);
 }
 
 .scroll-top {
   display: flex;
   align-items: center;
-  color: var(--dark-color);
+  color: var(--default-text-color);
 }
 
 /* PROJECTS PAGE */
+.projects-page-wrapper {
+  background-color: var(--default-background-color);
+  color: var(--default-text-color);
+  transition: 0.4s;
+}
+
 .main-title-projects {
   font-size: 4rem;
   text-align: center;
@@ -647,7 +667,7 @@ button {
 }
 
 .return-projects {
-  border: 1px solid var(--dark-color);
+  border: 1px solid var(--default-text-color);
   padding: 0.5rem;
   border-radius: 0.3rem;
   transition: 0.25s;
@@ -658,6 +678,12 @@ button {
 }
 
 /* ARTICLES PAGE */
+.articles-page-wrapper {
+  background-color: var(--default-background-color);
+  color: var(--default-text-color);
+  transition: 0.4s;
+}
+
 .posts-wrapper {
   display: grid;
   gap: 2rem;
@@ -784,7 +810,7 @@ button {
 
 .email {
   width: 100%;
-  border: 1px solid var(--dark-color);
+  border: 1px solid var(--default-text-color);
   padding: 0.5rem;
   border-radius: 5px;
   margin: 2rem 0;
@@ -794,8 +820,8 @@ button {
   border-radius: 5px;
   width: 100%;
   padding: 0.5rem;
-  background-color: var(--dark-color);
-  color: var(--light-color);
+  background-color: var(--default-text-color);
+  color: var(--default-background-color);
   cursor: pointer;
   transition: 0.14s;
 }
@@ -816,7 +842,7 @@ button {
 }
 
 .thankyou-redirections > a {
-  border: 1px solid var(--dark-color);
+  border: 1px solid var(--default-text-color);
   padding: 0.5rem;
   border-radius: 0.4rem;
 }
@@ -847,7 +873,7 @@ button {
 }
 
 ::-webkit-scrollbar-track {
-  background-color: var(--dark-color);
+  background-color: var(--default-text-color);
 }
 
 ::-webkit-scrollbar-thumb {
@@ -971,5 +997,13 @@ button {
 @media screen and (max-width: 1000px) {
   .newsletter-container {
     max-width: 100%;
+  }
+
+  .about-page-wrapper {
+    height: calc(100vh + 3rem);
+  }
+
+  .lower-section-data-container {
+    margin-bottom: 3rem;
   }
 }
