ARTICLE: Design Patterns
The Real Reason to Learn Design Patterns

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -85,6 +85,10 @@ button {
 
 /* REUSABLE CLASSES */
 
+.newpage-link {
+  color: #4169e1;
+}
+
 .container {
   max-width: 54rem;
   margin: 0 auto;
