starting newsletter card

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -851,6 +851,8 @@ button {
   background-color: #a19e9ec9;
 }
 
+/* NEWSLETTER CARD */
+
 /* THANK YOU PAGE */
 .thankyou-page-wrapper {
   background-color: var(--default-background-color);
