--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -637,6 +637,7 @@ button {
   background-color: var(--default-background-color);
   color: var(--default-text-color);
   transition: 0.4s;
+  min-height: 100vh;
 }
 
 .main-title-projects {
@@ -691,6 +692,7 @@ button {
   background-color: var(--default-background-color);
   color: var(--default-text-color);
   transition: 0.4s;
+  min-height: 100vh;
 }
 
 .posts-wrapper {
@@ -733,6 +735,7 @@ button {
 .article-page-wrapper {
   background-color: var(--default-background-color);
   color: var(--default-text-color);
+  min-height: 100vh;
 }
 
 .blog-post {
@@ -913,6 +916,142 @@ button {
 
 ::-webkit-scrollbar-thumb:hover {
   background-color: #808694;
+}
+
+/* LOADING ANIMATION COMPONENT */
+
+.loading-container-wrapper {
+  display: flex;
+  justify-content: center;
+  width: 100vw;
+}
+
+.ball {
+  width: 10px;
+  height: 10px;
+  margin: 10px auto;
+  border-radius: 50px;
+}
+
+.ball:nth-child(1) {
+  background: var(--default-text-color);
+  -webkit-animation: right 1s infinite ease-in-out;
+  -moz-animation: right 1s infinite ease-in-out;
+  animation: right 1s infinite ease-in-out;
+}
+
+.ball:nth-child(2) {
+  background: var(--default-text-color);
+  -webkit-animation: left 1.1s infinite ease-in-out;
+  -moz-animation: left 1.1s infinite ease-in-out;
+  animation: left 1.1s infinite ease-in-out;
+}
+
+.ball:nth-child(3) {
+  background: var(--default-text-color);
+  -webkit-animation: right 1.05s infinite ease-in-out;
+  -moz-animation: right 1.05s infinite ease-in-out;
+  animation: right 1.05s infinite ease-in-out;
+}
+
+.ball:nth-child(4) {
+  background: var(--default-text-color);
+  -webkit-animation: left 1.15s infinite ease-in-out;
+  -moz-animation: left 1.15s infinite ease-in-out;
+  animation: left 1.15s infinite ease-in-out;
+}
+
+.ball:nth-child(5) {
+  background: var(--default-text-color);
+  -webkit-animation: right 1.1s infinite ease-in-out;
+  -moz-animation: right 1.1s infinite ease-in-out;
+  animation: right 1.1s infinite ease-in-out;
+}
+
+.ball:nth-child(6) {
+  background: var(--default-text-color);
+  -webkit-animation: left 1.05s infinite ease-in-out;
+  -moz-animation: left 1.05s infinite ease-in-out;
+  animation: left 1.05s infinite ease-in-out;
+}
+
+.ball:nth-child(7) {
+  background: var(--default-text-color);
+  -webkit-animation: right 1s infinite ease-in-out;
+  -moz-animation: right 1s infinite ease-in-out;
+  animation: right 1s infinite ease-in-out;
+}
+
+@-webkit-keyframes right {
+  0% {
+    -webkit-transform: translate(-15px);
+  }
+  50% {
+    -webkit-transform: translate(15px);
+  }
+  100% {
+    -webkit-transform: translate(-15px);
+  }
+}
+
+@-webkit-keyframes left {
+  0% {
+    -webkit-transform: translate(15px);
+  }
+  50% {
+    -webkit-transform: translate(-15px);
+  }
+  100% {
+    -webkit-transform: translate(15px);
+  }
+}
+
+@-moz-keyframes right {
+  0% {
+    -moz-transform: translate(-15px);
+  }
+  50% {
+    -moz-transform: translate(15px);
+  }
+  100% {
+    -moz-transform: translate(-15px);
+  }
+}
+
+@-moz-keyframes left {
+  0% {
+    -moz-transform: translate(15px);
+  }
+  50% {
+    -moz-transform: translate(-15px);
+  }
+  100% {
+    -moz-transform: translate(15px);
+  }
+}
+
+@keyframes right {
+  0% {
+    transform: translate(-15px);
+  }
+  50% {
+    transform: translate(15px);
+  }
+  100% {
+    transform: translate(-15px);
+  }
+}
+
+@keyframes left {
+  0% {
+    transform: translate(15px);
+  }
+  50% {
+    transform: translate(-15px);
+  }
+  100% {
+    transform: translate(15px);
+  }
 }
 
 /* MEDIA QUERIES */
